# Adaptrouter

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
adaptrouter/: __init__.py  calibration.py  config.py  core.py  drift_detector.py  explainer.py  feedback_collector.py  feedback_store.py  implicit_feedback.py  retrainer.py  telemetry.py
adaptrouter/examples/: medical_domain.py
benchmark/: compare_routers.py  day7_explainer_demo.py  day8_calibration_demo.py  final_comparison.py  profiler.py  simulate_feedback.py
dashboard/: app.py
tests/: test_calibration.py  test_core.py  test_explainer.py  test_feedback_collector.py  test_feedback_store.py  test_implicit_feedback.py  test_retrainer.py  test_telemetry.py
