[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "adaptrouter"
version = "0.1.0"
description = "Self-improving LLM router with feedback loop and domain adaptation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Shreya", email = "your.email@example.com"}
]
keywords = [
    "llm", "router", "self-improving", "feedback-loop",
    "domain-adaptation", "machine-learning", "nlp"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "groq>=0.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
explainability = ["shap>=0.42.0", "matplotlib>=3.7.0"]
dashboard      = ["streamlit>=1.28.0", "plotly>=5.17.0"]
telemetry      = []
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.11.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]
all = [
    "shap>=0.42.0",
    "matplotlib>=3.7.0",
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
]

[project.urls]
Homepage      = "https://github.com/shreyagobi/adaptrouter"
Documentation = "https://github.com/shreyagobi/adaptrouter#readme"
Repository    = "https://github.com/shreyagobi/adaptrouter"
Issues        = "https://github.com/shreyagobi/adaptrouter/issues"

[tool.setuptools.packages.find]
where   = ["."]
include = ["adaptrouter*"]